seperated out the populateAnswers function for better readability. added checkWin function to test if the player clicked the correct answer. created a quiz over function to show the scores at the end of the game.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,11 @@
     background-color: violet;
     margin: 1rem 5rem;
 }
+
+.quiz-over-container {
+    background-color: aliceblue;
+    margin: 1rem 5rem;
+}
 .hidden {
     display: none;
     height: 0;
